<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/circular_widget_bg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/circular_index_color"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/green_circle">


        <TextView
            android:id="@+id/circular_pm_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:paddingTop="3dp"
            android:paddingBottom="8dp"
            android:text="@string/pm_scale"
            android:textAppearance="@style/circle_pm_scale" />

        <TextView
            android:id="@+id/circular_pm_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/pm_value"
            android:textAppearance="@style/circle_pm_value"
            android:textFontWeight="600"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/circular_pm_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:paddingTop="8dp"
            android:paddingBottom="17dp"
            android:text="@string/pmUnit"
            android:textAppearance="@style/circle_pm_unit" />


    </RelativeLayout>

    <TextView
        android:id="@+id/circular_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circular_index_color"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:text="@string/location"
        android:textAppearance="@style/circle_location"
        android:textFontWeight="500"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circular_index_color"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="-30dp"
        android:layout_toStartOf="@+id/circular_location"
        android:contentDescription="@string/location_icon"
        android:src="@drawable/location_icon" />

    <TextView
        android:id="@+id/circular_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circular_location"
        android:layout_marginStart="29dp"
        android:text="@string/date_circle"
        android:textAppearance="@style/circle_location" />

    <ImageView
        android:id="@+id/circular_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/circular_location"
        android:layout_marginStart="2dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/circular_date"
        android:contentDescription="@string/refresh_icon"
        android:src="@drawable/refresh_circle" />

</RelativeLayout>